feat(docker-page): add animations

--- a/summary/docker.html
+++ b/summary/docker.html
@@ -67,7 +67,7 @@
             </ul>
         </nav>
         <div id="intro" class="flex flex-wrap h-5/6">
-            <div class="flex items-center px-2 w-full xl:w-1/2">
+            <div id="intro__content" class="flex items-center px-2 w-full xl:w-1/2">
                 <div>
                     <h2 id="technology" class="font-bold text-center text-4xl lg:text-8xl">Docker</h2>
                     <p class="text-center text-sm lg:text-xl mt-4 lg:mt-10">
@@ -76,8 +76,8 @@
                     <button class="block text-sm lg:text-xl text-white font-bold mx-auto mt-4 lg:mt-10 px-10 py-2 border rounded">Explore</button>
                 </div>
             </div>
-            <div class="flex items-center w-2/3 lg:w-1/2 mx-auto">
-                <img src="../img/docker/moby-logo.png" alt="docker logo" id="docker-logo" class="block mx-auto">
+            <div id="intro__logo" class="flex items-center w-2/3 lg:w-1/2 mx-auto">
+                <img src="../img/docker/moby-logo.png" alt="docker logo" class="block mx-auto">
             </div>
         </div>
     </header>
