--- a/summary/docker.html
+++ b/summary/docker.html
@@ -11,8 +11,25 @@
 </head>
 <body>
     <header>
-        <div id="wave" class="h-full w-full">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="xl:h-auto h-1/2">
+        <div id="header__background" class="h-full w-full">
+            <div id="bird-container" class="inline-block">
+                <div id="bird--1" class="bird">
+                    <div class="bird__animations"></div>
+                </div>
+                <div id="bird--2" class="bird">
+                    <div class="bird__animations"></div>
+                </div>
+                <div id="bird--3" class="bird">
+                    <div class="bird__animations"></div>
+                </div>
+                <div id="bird--4" class="bird">
+                    <div class="bird__animations"></div>
+                </div>
+                <div id="bird--5" class="bird">
+                    <div class="bird__animations"></div>
+                </div>
+            </div>
+            <svg id="wave" class="xl:h-auto h-1/2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                 <defs>
                     <linearGradient id="wave-gradient" x1="0%" y1="0%" x2="100%" y2="0%">
                         <stop offset="0%" stop-color="#2496ee" stop-opacity="1"></stop>
@@ -60,7 +77,7 @@
         <nav id="nav" class="px-2 pt-2">
             <ul>
                 <li class="inline-flex items-center border border-transparent rounded">
-                    <a href="#" class="text-sm lg:text-xl px-4 py-2">
+                    <a class="text-sm lg:text-xl px-4 py-2" href="#">
                         <i class="fas fa-angle-double-left"></i>
                     </a>
                 </li>
@@ -77,7 +94,7 @@
                 </div>
             </div>
             <div id="intro__logo" class="flex items-center w-2/3 lg:w-1/2 mx-auto">
-                <img src="../img/docker/moby-logo.png" alt="docker logo" class="block mx-auto">
+                <img class="block mx-auto" src="../img/docker/moby-logo.png" alt="docker logo">
             </div>
         </div>
     </header>
