feat(docker-page): add bubble background

--- a/src/docker.html
+++ b/src/docker.html
@@ -32,19 +32,6 @@
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 1440 320"
         >
-          <defs>
-            <linearGradient
-              id="wave-gradient"
-              x1="0%"
-              y1="0%"
-              x2="100%"
-              y2="0%"
-            >
-              <stop offset="0%" stop-color="#2496ee" stop-opacity="1"></stop>
-              <stop offset="100%" stop-color="#53b6f1" stop-opacity="1"></stop>
-            </linearGradient>
-          </defs>
-
           <path>
             <animate
               attributeName="d"
@@ -169,7 +156,13 @@
       </div>
     </header>
     <main role="main">
-      <!--  -->
+      <section id="creator">
+        <div class="background">
+          <div id="bubble-container">
+            <!-- JS will generate the children element -->
+          </div>
+        </div>
+      </section>
     </main>
 
     <script
