refactor: clean code

--- a/src/docker.html
+++ b/src/docker.html
@@ -127,20 +127,7 @@
               on-prem or in the cloud.
             </p>
             <button
-              class="
-                block
-                text-sm
-                lg:text-xl
-                text-white
-                font-bold
-                mx-auto
-                mt-4
-                lg:mt-10
-                px-10
-                py-2
-                border
-                rounded
-              "
+              class="block text-sm lg:text-xl text-white font-bold mx-auto mt-4 lg:mt-10 px-10 py-2 border rounded"
             >
               Explore
             </button>
